fix application.properties on rag-generator-backend

--- a/rag-generator/backend-springboot/.gitignore
+++ b/rag-generator/backend-springboot/.gitignore
@@ -8,10 +8,11 @@
 .env.development
 .env.test
 .env.production
-src/main/resources/application.properties
+src/main/resources/application.properties.secrets
 
 # Keep templates for sharing example configs
 !.env.template
+!src/main/resources/application.properties
 !src/main/resources/application.template.properties
 
 # ================================================
