--- a/rag-generator/backend-springboot/src/main/resources/application.template.properties
+++ b/rag-generator/backend-springboot/src/main/resources/application.template.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend-springboot
 server.port=3000
 
-use.mock=false
+use.mock=true
 openai.api.key=sk-your-openai-api-key
 anthropic.api.key=claude-your-key
