Exclude tools from backend tests

--- a/rag-generator/backend-springboot/pom.xml
+++ b/rag-generator/backend-springboot/pom.xml
@@ -67,6 +67,11 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>${jacoco-maven-plugin.version}</version>
+        <configuration>
+	      <excludes>
+	        <exclude>**/tools/**</exclude>
+	      </excludes>
+	    </configuration>
         <executions>
           <execution>
             <id>prepare-agent</id>
