--- a/rag-generator/frontend-angular/package.json
+++ b/rag-generator/frontend-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rag-connector-frontend-angular",
-  "version": "20.3.3",
+  "version": "20.3.4",
   "scripts": {
     "ng": "ng",
     "dev": "ng serve --port 4200",
@@ -25,28 +25,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "20.3.3",
-    "@angular/compiler": "20.3.3",
-    "@angular/core": "20.3.3",
-    "@angular/forms": "20.3.3",
-    "@angular/platform-browser": "20.3.3",
-    "@angular/platform-server": "20.3.3",
-    "@angular/router": "20.3.3",
-    "@angular/ssr": "^20.3.4",
+    "@angular/common": "20.3.4",
+    "@angular/compiler": "20.3.4",
+    "@angular/core": "20.3.4",
+    "@angular/forms": "20.3.4",
+    "@angular/platform-browser": "20.3.4",
+    "@angular/platform-server": "20.3.4",
+    "@angular/router": "20.3.4",
+    "@angular/ssr": "20.3.5",
     "@fortawesome/fontawesome-free": "7.1.0",
     "bootstrap": "5.3.8",
-    "express": "^5.1.0",
+    "express": "5.1.0",
     "rxjs": "7.8.2",
     "tslib": "2.8.1",
     "zone.js": "0.15.1"
   },
   "devDependencies": {
-    "@angular/build": "20.3.4",
-    "@angular/cli": "20.3.4",
-    "@angular/compiler-cli": "20.3.3",
-    "@types/express": "^5.0.1",
+    "@angular/build": "20.3.5",
+    "@angular/cli": "20.3.5",
+    "@angular/compiler-cli": "20.3.4",
+    "@types/express": "5.0.3",
     "@types/jasmine": "5.1.9",
-    "@types/node": "^20.17.19",
+    "@types/node": "24.7.0",
     "angular-eslint": "20.3.0",
     "eslint": "9.37.0",
     "jasmine-core": "5.12.0",
