--- a/rag-generator/backend-springboot/pom.xml
+++ b/rag-generator/backend-springboot/pom.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-     http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>3.5.5</version>
-		<relativePath />
+    <relativePath />
   </parent>
   <groupId>com.ganatan</groupId>
   <artifactId>backend-springboot</artifactId>
   <version>1.0.0</version>
   <name>backend-springboot</name>
   <description>Demo backend-springboot</description>
+
   <properties>
     <java.version>21</java.version>
     <qdrant.version>1.15.0</qdrant.version>
@@ -22,6 +22,7 @@
     <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -33,40 +34,38 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-webflux</artifactId>
-    </dependency>
-    
-	<dependency>
-	  <groupId>org.springframework.boot</groupId>
-	  <artifactId>spring-boot-starter-data-jpa</artifactId>
-	</dependency>
-	<dependency>
-	    <groupId>com.oracle.database.jdbc</groupId>
-	    <artifactId>ojdbc11</artifactId>
-	    <scope>runtime</scope>
-	</dependency>		
-
-	<dependency>
-    	<groupId>io.qdrant</groupId>
-    	<artifactId>client</artifactId>
-    	<version>${qdrant.version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>io.grpc</groupId>
-	    <artifactId>grpc-netty-shaded</artifactId>
-	    <version>${io.grpc.version}</version>
-	</dependency>
-	 <dependency>
-	      <groupId>io.grpc</groupId>
-	      <artifactId>grpc-protobuf</artifactId>
-	    <version>${io.grpc.version}</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
     </dependency>
     <dependency>
-	    <groupId>io.grpc</groupId>
-	    <artifactId>grpc-stub</artifactId>
-	    <version>${io.grpc.version}</version>
-    </dependency>	
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.oracle.database.jdbc</groupId>
+      <artifactId>ojdbc11</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.qdrant</groupId>
+      <artifactId>client</artifactId>
+      <version>${qdrant.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.grpc</groupId>
+      <artifactId>grpc-netty-shaded</artifactId>
+      <version>${io.grpc.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.grpc</groupId>
+      <artifactId>grpc-protobuf</artifactId>
+      <version>${io.grpc.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.grpc</groupId>
+      <artifactId>grpc-stub</artifactId>
+      <version>${io.grpc.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -79,10 +78,10 @@
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>${jacoco-maven-plugin.version}</version>
         <configuration>
-	      <excludes>
-	        <exclude>**/tools/**</exclude>
-	      </excludes>
-	    </configuration>
+          <excludes>
+            <exclude>**/tools/**</exclude>
+          </excludes>
+        </configuration>
         <executions>
           <execution>
             <id>prepare-agent</id>
@@ -111,5 +110,5 @@
       </plugin>
     </plugins>
   </build>
-  
+
 </project>
